Add CI config and update Makefile for deployment

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,15 @@
-.PHONY: install uninstall
+.PHONY: install uninstall build
 
 all: install
+
+build:
+	python3 setup.py bdist_wheel
 
 uninstall:
 	pip3 uninstall -y elastictalk
 
-install: uninstall
-	python3 setup.py bdist_wheel
+install: uninstall build
 	pip3 install dist/elastictalk-0.0.1-py3-none-any.whl
+
+deploy: build
+	python3 -m twine upload dist/*
