--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [pycodestyle]
 ignore = W504
 max-line-length = 160
-exclude = */migrations/,env/,*venv/,manage.py
+exclude = */migrations/,env/,*venv/,manage.py,src/build/
 
 [flake8]
 ignore = W504
 max-line-length = 160
-exclude = */migrations/,env/,*venv/,manage.py
+exclude = */migrations/,env/,*venv/,manage.py,src/build/
